hopefully last hot fix -- fixes extra space to the right on mobile

--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -4,6 +4,5 @@
   height: 120px;
   width: 100%;
   margin-top: 1%;
-  padding: 2%;
   display: flex;
 }
